updated at: 2023-04-25 21:28, 校舎花伝 PET350ml - 土司空（DOSHIKU）@鯨座βの店 - BOOTH

--- a/VRChat/21/1323521.html
+++ b/VRChat/21/1323521.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "H1c5tDbSdKYaf6sSdAOCb1O2XInx/F1wsCwzDvRaLew="></script>
+    "NWKXhT48d0kAHotvKUb1N3iflA1CM3OCTeT3Qd5AVJI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"校舎花伝 PET350ml","description":"【校舎花伝 PET350ml】\n\nパロディ商品です\nVRChat向け・小物アイテム\n\nお得なセット販売もあります。\n\nポリゴン数\n　校舎花伝 PET350ml：9408\n　校舎花伝 PET350ml_ローポリ：2820\n\n【内容】\n\n■readme.txt\n\n■校舎花伝 PET350ml.unitypackage\n　→校舎花伝 PET350mlとそれぞれのテクスチャ、マテリアル\n\n■モデル・テクスチャ改造用フォルダ\n　　□校舎花伝.fbx\n　　□校舎花伝_ローポリ.fbx\n　　□校舎花伝.png\n　　□校舎花伝(UV).png\n　　\n\n\n【使用方法】\nUnityに校舎花伝 PET350ml.unitypackageをimportしてください。\n校舎花伝 PET350mlをアバターにセットしご利用ください。\n蓋やラベル等はそれぞれ別々のオブジェクトとして登録しているので、\n蓋を非表示にし、蓋が開いている表現等も簡単にできます。\n\n\n【※注意事項】\n\n・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n・改変等はご自由にどうぞ！\n・製作者を騙ることを禁止します。\n・モデルの再配布を禁止します。\n・良識の範囲でのご使用をお願い致します。\n・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者:土司空〈DOSHIKU〉\nhttps://twitter.com/airgaogao \n\nご不明な点、バグなどございましたらご連絡いただけますと幸いです。\n\n2019.04.19　販売開始\n","url":"https://booth.pm/ja/items/1323521","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/e201f4f8-6bc0-4319-ac66-863763d14127/i/1323521/20b0f503-6d39-4945-be8c-be6044ed1963_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H1c5tDbSdKYaf6sSdAOCb1O2XInx/F1wsCwzDvRaLew="></script>
+    nonce="NWKXhT48d0kAHotvKUb1N3iflA1CM3OCTeT3Qd5AVJI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1323521/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1323521/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
