updated at: 2023-04-25 21:28, 【VRChat】カリカリ - vrshuriken&#39;s shop - BOOTH

--- a/VRChat/40/1323340.html
+++ b/VRChat/40/1323340.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RbpqB80DmkSWwYv1fLX8MuptCaB6P9vMnYKOK2TbI/s="></script>
+    "KrLl4hSC7hfhh4DMPbREJ7po+nCWjhrOUIFhYLcL3G0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】カリカリ","description":"例のカリカリです、おやつにぴったり！\n△1928\n※アバターは付属しません","url":"https://booth.pm/ja/items/1323340","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a33b7662-9a73-4f2e-b2bf-ce41a2923250/i/1323340/aa3d29c6-cc8f-4e7c-9d59-faf63c11fd71_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RbpqB80DmkSWwYv1fLX8MuptCaB6P9vMnYKOK2TbI/s="></script>
+    nonce="KrLl4hSC7hfhh4DMPbREJ7po+nCWjhrOUIFhYLcL3G0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -167,7 +169,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1323340/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -182,14 +184,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1323340/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
