--- a/VRChat/69/1323169.html
+++ b/VRChat/69/1323169.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XqNE5+Gjxl26ZlQ2NeFDlxz/RcfQyKLZfpNtIOmJNig="></script>
+    "EzdSVd3JKZOCK0/JDvkPb0I+R18w0mUCHg+7UXWxdjc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SteamHeadPhones","description":"SteamHeadPhones\n\nArktoon-Shaderでセットアップ済み\nhttps://booth.pm/ja/items/1027997\n\n内容\nSteamHeadSet.unitypackage\n詳細\n ・ポリゴン　      4566\n ・マテリアル      1\n ・テクスチャ　　  4\n ・アニメーション　1\n\n利用規約\n・改変　　　可\n・商用利用　可\n・再配布　　不可\n　　データが取り出せない状態での配布はOK。\n\n※このモデルを使用したトラブルについての責任は一切負いません。\n※このモデルを使用した場合、上記に同意したものとみなされます。","url":"https://booth.pm/ja/items/1323169","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/e0415562-fcb7-4594-a7f1-147b54a5ca15/i/1323169/6e65022a-d524-412c-b6de-5250993976da_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XqNE5+Gjxl26ZlQ2NeFDlxz/RcfQyKLZfpNtIOmJNig="></script>
+    nonce="EzdSVd3JKZOCK0/JDvkPb0I+R18w0mUCHg+7UXWxdjc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1323169/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1323169/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
