--- a/VRChat/88/1322988.html
+++ b/VRChat/88/1322988.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xeAzjlRB+h75UXtQqZcEW1DV0CJpVn9TiaWqMY0+NJA="></script>
+    "KDBzb5mgmIwj2oIHwL5f22vPoGCZODnTgT2IadmvPjY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[無料]３Dモデル「犬井弦」ローポリモデルVRC,VRM対応","description":"ポリゴン数△\n本体9062\n帽子672\n杖366\nファイル形式\nfbx、VRM\n\n同梱ファイル\nFBX---帽子付き(gen3.0+H),帽子なし(gen3.0),　杖(tue2.0)\nVRC---帽子と杖付き(gen3.0+TH)　帽子付き(gen3.0+H)　帽子なし(gen3.0)\nテクスチャ\nhead\nbody\nhat\ntue\n\nVRCで杖を使用する場合は\n本体データと杖のデータを両方入れて位置を調整した後 出力してください\n・収益化動画等の撮影、映り込み ・モデル改変可能 \n商用可能ですが著作権を譲渡はいたしませんのでご了承ください。\n再配布、転売、公序良俗に反する行為、その他碧守キャベツに不利益になる行為に使用することはご遠慮ください\n","url":"https://booth.pm/ja/items/1322988","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5ab2513b-2360-4475-bb48-29cce99ec2cc/i/1322988/8d97f660-8e61-4b98-ba7b-d619154696db_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xeAzjlRB+h75UXtQqZcEW1DV0CJpVn9TiaWqMY0+NJA="></script>
+    nonce="KDBzb5mgmIwj2oIHwL5f22vPoGCZODnTgT2IadmvPjY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1322988/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1322988/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
