updated at: 2023-04-25 21:29, パーティクル弓矢 - Licoのバーチャル雑貨店 - BOOTH

--- a/VRChat/98/1321598.html
+++ b/VRChat/98/1321598.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7s4NxgsnazIrt2TdnNLRq+C2leger6+yE2OR0syJ3lE="></script>
+    "BiS0ZX7antUpSnP9rkw1WVHRDPKaSMOJ4cKNTQtNMMo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パーティクル弓矢","description":"＃概要\nVRChatでの使用を想定した、実際に自分の手で弓を引いて矢が撃てるパーティクル製の弓矢です。\nアニメーションオーバーライドを一切必要としないのが特徴で、弓の出し入れや矢筒から矢を取って射るまでを全て両手の動きだけでできます。\n\n山なりに飛んで壁にも刺さるリアルな弓矢はいかがでしょうか。\n\n\n使用例のサンプル画像にはむた様製作のキッシュちゃん改変モデルを使わせていただいています。\n\n------------------------------------------------------------------------------\n\n2019/06/15 更新\n\nアニメーションオーバーライドを使って握る手を離すことで、矢の速さと射るタイミングを自由に変えることができる弓を新しく追加しました。\n\n2021/08/14 更新\n\nVRChatがUnity2019.4.29f1へ移行したことでパーティクルの挙動が戻ったので、現在の環境に合わせて内容を調整し販売を再開しました。","url":"https://booth.pm/ja/items/1321598","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/a0ea27a1-0ce8-4aaf-9bac-bbd245b8b6c8/i/1321598/d6127a0b-141e-4d5b-985b-f7d453bb14fe_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7s4NxgsnazIrt2TdnNLRq+C2leger6+yE2OR0syJ3lE="></script>
+    nonce="BiS0ZX7antUpSnP9rkw1WVHRDPKaSMOJ4cKNTQtNMMo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1321598/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               524
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1321598/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               524
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
