--- a/VRChat/27/1322527.html
+++ b/VRChat/27/1322527.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Ml1duB8A+3pSFPr/CdL7mJO1eoRtEBoNbkcaZwh5bxI="></script>
+    "9EgGgR2mUuGG8Iz50HQmtUX58jJ7s7a7A9zqLgzcLOU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ステンドグラスシェーダー","description":"StainedGlassシェーダー\n作者：オノッチ(https://twitter.com/onotchi_)\n\n画像をステンドグラス風に表示するUnity用のシェーダーです。\nパラメーターで自動に網目模様を作ってステンドグラス風にするため、\n表示させたい画像を一枚用意するだけで利用できます。\nVRChatでの利用も可能です。\n\n開発中の動画\nhttps://twitter.com/onotchi_/status/1118129532291170306\n\nシェーダーは\n透過のStandard Shaderタイプ(ノーマル(法線)計算あり)\nと\nUnlitタイプ\nの2種類があります。\n\n主なパラメーター\nTexture：表示したいテクスチャをセットします\nFrame：網目のベースとなる縦横分割数をセットします。\nx:横方向分割数　y:縦方向分割数 zとwは使いません。\nBrightness：網目に対応した黒のグラデーションで明るさを設定します。\nRandom:網目の形を数値によって変更します。\nSobel Calc Range, Sobel Threshold:ソーベルフィルタリングの計算範囲等の変更で網目の太さを加減します。\nPalallaxScale, NormalScaleFactor:ノーマル(法線)の強度を調整します。\n\n【重要】\nV1.1にてシェーダーの名前を若干変更しました。\nOnoty3D/StainedGlassUnlit\n→ Onoty3D/StainedGlass Unlit\nOnoty3D/StainedGlassStandard\n→ Onoty3D/StainedGlass Standard Trans\n\n新たに透過しないStandardタイプ\nOnoty3D/StainedGlass Standard\nを追加しました。\n\n旧バージョンのシェーダーに上書きする場合はご注意ください。\n\n\n利用規約：\n・著作権はオノッチに帰属します。\n・本データを再配布/再販売することを禁止します。\n・収益化配信等での利用は問題ありません。\n・利用の際にクレジットの表記等は不要です(利用を報告していただけると喜びます。)\n\n免責：\n・利用は自己責任とし、トラブルが発生した場合でも一切の責任は負いかねますので、予めご了承ください。\n\n連絡：\n不明な点がございましたら、オノッチ(https://twitter.com/onotchi_)までお問い合わせください。\n\n履歴：\n2019/04/19 BOOTHにて公開\n2019/04/25 BOOTHにてV1.1公開\n・ステンドグラスの一部が黒く潰れる問題の修正\n・UVの端で反対側の色が取れてしまう問題の軽減\n・透過しないStandardShaderバージョンの追加","url":"https://booth.pm/ja/items/1322527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/a5ee2955-f931-4ee1-9f8c-8ffe0ada05e8/i/1322527/072a039d-26e3-48af-aea9-7d798dac3b39_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ml1duB8A+3pSFPr/CdL7mJO1eoRtEBoNbkcaZwh5bxI="></script>
+    nonce="9EgGgR2mUuGG8Iz50HQmtUX58jJ7s7a7A9zqLgzcLOU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1322527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1322527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
