updated at: 2023-04-25 21:29, KiraDragon_Acrylic_Keychain - kiradragon - BOOTH

--- a/VRChat/23/1322223.html
+++ b/VRChat/23/1322223.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mJh/fAdDX7Df/BsEEE7NNJdzF12yqOXNB4p0Wl8GZkE="></script>
+    "YBlHd6S+NSlNNdTOLIYrCvJVFg9bLAC5dvl4w/6ERCw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KiraDragon_Acrylic_Keychain","description":"サンプル画像は完成イメージのため、実物と異なる場合があります。\n\nhttps://twitter.com/TodayKiral/status/1116982635761287168","url":"https://booth.pm/ja/items/1322223","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1240"},"image":"https://booth.pximg.net/c/620x620/a950ffbb-8199-4a22-91e3-9accc64436af/i/1322223/5d07fc26-4081-4da6-a7c2-7562681f0ecd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mJh/fAdDX7Df/BsEEE7NNJdzF12yqOXNB4p0Wl8GZkE="></script>
+    nonce="YBlHd6S+NSlNNdTOLIYrCvJVFg9bLAC5dvl4w/6ERCw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1322223/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1322223/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -328,7 +329,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
