--- a/VRChat/21/1321621.html
+++ b/VRChat/21/1321621.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yDFUm4/zCt7eyLh0eCCZwvDxN2Rs4FGABQ0LKPCQCkQ="></script>
+    "2jxqki/QFuAZRD3JOrMFEg+9RYTIZYmNtYkfCgmh7wc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】揺れるエビフライ＆エビチリのようなもの【Unitypackage】","description":"UTSとDynamicBoneをインポートした後にこのパッケージをインポートしてPrefabをシーンにドロップしたら使えると思います。\n\nこんな感じで揺れます→https://twitter.com/MaguroVrc/status/1118524586931343360\n\n禁止事項：二次配布・自作発言","url":"https://booth.pm/ja/items/1321621","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1321621/d2cd5361-bb6e-422c-8911-a7e6e6f45466_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yDFUm4/zCt7eyLh0eCCZwvDxN2Rs4FGABQ0LKPCQCkQ="></script>
+    nonce="2jxqki/QFuAZRD3JOrMFEg+9RYTIZYmNtYkfCgmh7wc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1321621/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1321621/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               147
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
