--- a/VRChat/29/1321429.html
+++ b/VRChat/29/1321429.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fuPZQWMoH5Z5ns/daN7mNWTEJshAyWHrDKIpGb5pSrQ="></script>
+    "WNaDucH+mZKN/fuzdrd5E8sz6UhLlIc/zSs3H6Sf/cQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Geld | Orc - VRChat 3Dモデル [Tensei Shitara Slime] - v1.1","description":"Geld / Orc from Tensei Shitara Slime\n\nThis package only contains Geld / Orc. \nShion and Rimuru can be bought here : \n\n-VRChat full-body\n-Includes Axe\n-No Visemes\n-No Eye Tracking \n-Jaw dynamic bone\n\nBuy Rimuru here  : https://codealdnoah.booth.pm/items/1321460","url":"https://booth.pm/ja/items/1321429","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/b08ef39d-9a86-42e9-9532-d52b3275adae/i/1321429/df4cbfb3-76b3-484b-ae2b-4e3b7d70fa86_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fuPZQWMoH5Z5ns/daN7mNWTEJshAyWHrDKIpGb5pSrQ="></script>
+    nonce="WNaDucH+mZKN/fuzdrd5E8sz6UhLlIc/zSs3H6Sf/cQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -164,7 +166,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1321429/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
@@ -179,14 +181,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1321429/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
