updated at: 2023-04-25 21:30, ヘッドアクセサリー - ぎすのたまり場 - BOOTH

--- a/VRChat/56/1320556.html
+++ b/VRChat/56/1320556.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "H6r83Zq+VsYPEzedOjgCpfbveGSEGnr2UrTNP5WgM6o="></script>
+    "XvotA4ymP8QkAIAM1m/IIReJVL+PMe3pEQaFbluSpto="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヘッドアクセサリー","description":"FBX形式△22444\n　耳の部分△2144\n　ハート部分△6080\n　電波部分△14220\n\nよくわからない頭につけるものです。ハートかわいい。\nUVマップと耳部分色のみテクスチャをつけておきます。\nまた、VRChat用にメッシュ結合版を入れておきます。\nサイズ、位置は個人で調整してください。\nメッシュ3・マテリアル4\n改変OK、再配布・自作発言NO\nなにか要望等あればtwitterまで。\n個人的に更新したりすることもあるかもしれません。\n","url":"https://booth.pm/ja/items/1320556","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/fd23d77a-84c3-4c8d-8440-92fc68683183/i/1320556/2856905d-4da2-4878-974f-b2e8f5cf415f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H6r83Zq+VsYPEzedOjgCpfbveGSEGnr2UrTNP5WgM6o="></script>
+    nonce="XvotA4ymP8QkAIAM1m/IIReJVL+PMe3pEQaFbluSpto="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1320556/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               152
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1320556/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               152
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
