updated at: 2023-04-25 21:31, 半袖シャツワンピース VRoid texture【正式版対応】 - 7692_shop - BOOTH

--- a/VRChat/66/1319266.html
+++ b/VRChat/66/1319266.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AzRQv7rGZeUJdf0Y/upmj9IzicTatelpxR7FDGfIBJA="></script>
+    "fGR05E6/HzvLPwYngHPIv4+03mdlIx7ITPzn3mSdkdM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"半袖シャツワンピース VRoid texture【正式版対応】","description":"◆VRoid Studio正式版との互換性を確認済です◆\nThe compatibility with the official version of VRoid Studio has been confirmed.\n\n春夏にぴったりの涼しげなワンピースです。\n清楚なストライプのシャツ素材で爽やかな雰囲気に。","url":"https://booth.pm/ja/items/1319266","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/d7b53162-9fa2-4856-b18d-81e9400489ed/i/1319266/6aae0b3c-97f1-4adf-b926-ac8c2eb60098_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AzRQv7rGZeUJdf0Y/upmj9IzicTatelpxR7FDGfIBJA="></script>
+    nonce="fGR05E6/HzvLPwYngHPIv4+03mdlIx7ITPzn3mSdkdM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,10 +159,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1319266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              283
+                              284
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1319266/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              283
+                              284
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
