updated at: 2023-04-25 21:31, りょうさん型ケイロカミオカ改 ゴンジカミオカ - ふーふむ - BOOTH

--- a/VRChat/25/1370925.html
+++ b/VRChat/25/1370925.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6av4OWjfm9EQ2ZUNV+7S248KYSq8ZVqYIwTX6Mjq1gQ="></script>
+    "758PmsyEYuOthJv1kvBntUl1no4zfjVl0hqzmaTBxm8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"りょうさん型ケイロカミオカ改 ゴンジカミオカ","description":"ケイロカミオカ氏本人が配布しているりょうさん型ケイロカミオカをおじいさんに改造したものです。\nVRCセットアップ済みunitypackageが含まれています。","url":"https://booth.pm/ja/items/1370925","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1f596065-0a7f-4db3-a357-9ddcef395015/i/1370925/38f829f7-72d8-4994-adca-d14363483b7c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6av4OWjfm9EQ2ZUNV+7S248KYSq8ZVqYIwTX6Mjq1gQ="></script>
+    nonce="758PmsyEYuOthJv1kvBntUl1no4zfjVl0hqzmaTBxm8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1370925/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1370925/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
