updated at: 2023-04-25 21:33, VRChatで読める新聞「週刊フレンドプラス」 - くらげのBooth - BOOTH

--- a/VRChat/79/1276079.html
+++ b/VRChat/79/1276079.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xvIlCGQaTmeSWYTCWcmvjaD0y0kLxElnLFm566Cb+3E="></script>
+    "c8z0cpGGtuxolkwLioFsKNN59K57fc0tMoBZtfIERMI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatで読める新聞「週刊フレンドプラス」","description":"VRChatのワールドに設置することのできる自動更新型コンテンツです。（TwitterID：DD_Jellyfishが手動更新しています）\n週刊フレンドプラスはVRChat上での話題提供を目的に制作している新聞型情報コンテンツです。VRChat上の話題を中心に取り扱っています。\nUnitypackage形式なので、Unityでワールドのプロジェクトに取り込んでご利用ください。\n\nバックナンバーはこちら：\nhttps://drive.google.com/drive/folders/1D8wbtMVSceUNKI1IRKcI6ldnWvGP02WA","url":"https://booth.pm/ja/items/1276079","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/35ad0fa7-eb31-41fa-b842-fcdd7687593f/i/1276079/9674ed85-ba1b-42bf-ab8e-0dd61b53fdaf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xvIlCGQaTmeSWYTCWcmvjaD0y0kLxElnLFm566Cb+3E="></script>
+    nonce="c8z0cpGGtuxolkwLioFsKNN59K57fc0tMoBZtfIERMI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1276079/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               351
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1276079/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               351
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
