updated at: 2023-04-25 21:33, VRC前提の衣装 - 偏見で語る兵器bot - BOOTH

--- a/VRChat/10/1367610.html
+++ b/VRChat/10/1367610.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1h6/fDGHrf/LoC8GuUK0JEJMHoevVnoYqqg28BZ/1Eg="></script>
+    "8SyjjNMm5DlBlO5v1gjDKaiDv9bLQ4bWco1xmNGan7Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC前提の衣装","description":"※頭がありません\n組み合わせたいアバターの生首を乗せてください\n\n※シェーダーは同梱しておりません\n組み合わせたいアバターのシェーダーに合わせて下さい\n\n※ClothもDynamicBoneも入ってません\n物理演算的にしたい人は入れてください\n\n内容に不備やその他の要望などあればメッセージください\nまた同時にこの内容で妥当な価格など教えてください\n（MMDerなので無償文化圏の住人だからわからん）\n\n","url":"https://booth.pm/ja/items/1367610","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b05503b7-3533-4147-9df2-87c774dd464e/i/1367610/a225d14d-e10f-4a43-9e64-fd1457e6a26f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1h6/fDGHrf/LoC8GuUK0JEJMHoevVnoYqqg28BZ/1Eg="></script>
+    nonce="8SyjjNMm5DlBlO5v1gjDKaiDv9bLQ4bWco1xmNGan7Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1367610/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1367610/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
